Change WindowBatchIterator to be a pipeline breaker
This integrates the ordering logic into the WindowBatchIterator to
simplify the framing logic as it can be done on a List instead of a
source BatchIterator.

The assumption was that this should improve performance as it would
avoid extra row-allocations. (Before we had 1 full materialization in a
extra ordering BatchIterator + additional materializations in the
WindowBatchIterator; Even without ORDER BY the WindowBatchIterator was
materializing all rows due to the peer logic)

But benchmarks indicate that the performance is roughly the same:

    Q: select avg("adRevenue") over (partition by "cCode" order by "visitDate")
                    from uservisits
    C: 1
    | Version |         Mean ±    Stdev |        Min |     Median |         Q3 |        Max |
    |   V1    |     9261.637 ± 1215.407 |   8200.260 |   8569.312 |  10257.467 |  12525.779 |
    |   V2    |     9123.659 ±  916.305 |   8147.050 |   8643.932 |   9782.795 |  11572.873 |
    mean:   -   1.50%
    median: +   0.87%